chore(config): add Biome configuration and lint script
- Added biome.json for code formatting and linting setup
- Enabled organizeImports action in Biome assist configuration
- Added lint script in package.json to run Biome check with autofix
- Added Biome as a dev dependency in package.json

style(constants): replace spaces with tabs for indentation

- Converted all spaces to tabs in env.constants.ts, error.constants.ts, success.constants.ts,
  validation.constants.ts, todo.enum.ts, and validation.enum.ts files for consistent style

style(errors): replace spaces with tabs for indentation in custom error classes

- Reformatted custom.errors.ts to use tabs instead of spaces for indentation

style(index): replace spaces with tabs and fix formatting inconsist

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "server": "bun run --hot server/src/index.ts",
     "client": "cd client && bun run dev",
-    "dev": "concurrently \"bun run server\" \"bun run client\""
+    "dev": "concurrently \"bun run server\" \"bun run client\"",
+    "lint": "biome check --write"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.4",
@@ -11,6 +12,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.6",
     "@types/bun": "latest",
     "concurrently": "^9.2.1"
   }
