--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "server": "bun run --hot server/src/index.ts",
     "client": "cd client && bun run dev",
     "dev": "concurrently \"bun run server\" \"bun run client\"",
-    "lint": "biome check --write"
+    "lint": "biome check --write --unsafe"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.4",
