fix(scripts): update server script to remove biome lint command
- Changed server script to run 'bun run lint' instead of 'biome run lint'
- Simplified linting command execution in package.json scripts
- Ensured consistency with other bun run commands in scripts section

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hono-bun-react",
   "scripts": {
-    "server": "biome run lint && bun run --hot server/src/index.ts",
+    "server": "bun run lint && bun run --hot server/src/index.ts",
     "client": "cd client && bun run dev",
     "dev": "concurrently \"bun run server\" \"bun run client\"",
     "lint": "biome check --write --unsafe"
