--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.4",
     "hono": "^4.10.1",
+    "hono-rate-limiter": "^0.4.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
