--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "biome check --write --unsafe"
   },
   "dependencies": {
+    "@hono/oauth-providers": "^0.8.5",
     "@hono/zod-validator": "^0.7.4",
     "hono": "^4.10.1",
     "hono-rate-limiter": "^0.4.2",
